<resources>
    <string name="app_name">TP2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_internet_status">Statut Internet</string>
    <string name="menu_about">À propos</string>
    <string name="menu_abacus">Abacus</string>
    <string name="menu_user_grp_lbl">Gestion utilisateur</string>
    <string name="menu_form">Formulaire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_internet">Status Internet</string>
    <string name="inconu">Inconu</string>
    <string name="indicateur">INDICATEUR</string>
    <string name="big_red_circle">big red circle</string>
    <string name="non_connect">Non connecté</string>
</resources>